# SCU-Nexus

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERSON_B_CODE_READING_GUIDE.md  README.md  SCU_Nexus.pro  SECURITY.md  main.cpp  qml.qrc  team_work_assignment.md  ~$详细设计与架构设计说明书模板v5.docx  产品详细设计与架构设计说明书模板v5.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
SCU_Nexus/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  qml.qrc
SCU_Nexus/cmake/: windows.rc.in
SCU_Nexus/docs/team/: 01_person_A_app_framework_ui.md  02_person_B_auth_network_api.md  03_person_C_schedule_management.md  04_person_D_calendar_exam_grades.md  05_person_E_testing_packaging_conflict_check.md
SCU_Nexus/qml/: App.qml  AppNavigation.qml  LoginPage.qml  MainShell.qml  SettingsPage.qml
SCU_Nexus/qml/components/: AppButton.qml  AppDialog.qml  AppTextField.qml  Card.qml  DataTable.qml  EmptyView.qml  ErrorView.qml  FormRow.qml  IconButton.qml  LoadingView.qml  LoginRequiredView.qml  ModuleHeader.qml  SearchBar.qml  SectionHeader.qml  SegmentedControl.qml  SourceAttribution.qml  ToastHost.qml
SCU_Nexus/qml/components/query/: LastUpdatedLabel.qml  QueryStatePane.qml  RefreshButton.qml
SCU_Nexus/qml/components/schedule/: CourseCard.qml  CourseConflictBadge.qml  CourseGrid.qml  DayColumn.qml  SectionColumn.qml  WeekSwitcher.qml
SCU_Nexus/qml/pages/: AcademicCalendarPagePlaceholder.qml  ExamPlanPagePlaceholder.qml  GradesPagePlaceholder.qml  SchedulePagePlaceholder.qml
SCU_Nexus/qml/pages/calendar/: AcademicCalendarPage.qml  CalendarImageViewer.qml  StructuredAcademicCalendarView.qml
SCU_Nexus/qml/pages/classroom/: ClassroomDateDialog.qml  ClassroomDetailDialog.qml  ClassroomPage.qml  ClassroomPeriodDialog.qml  ClassroomRoomCard.qml
SCU_Nexus/qml/pages/exam/: ExamCard.qml  ExamPlanPage.qml
SCU_Nexus/qml/pages/grades/: CustomStatsTab.qml  GradeCourseCard.qml  GradeSummaryPanel.qml  GradesPage.qml  PassingScoresTab.qml  SchemeScoresTab.qml
SCU_Nexus/qml/pages/schedule/: CourseEditDialog.qml  ImportScheduleDialog.qml  ScheduleManagementDialog.qml  SchedulePage.qml  ScheduleSettingsDialog.qml  TimeSlotSettingsDialog.qml
SCU_Nexus/qml/styles/: Theme.qml
SCU_Nexus/resources/calendar/: academic_calendars.json
SCU_Nexus/src/app/: AppController.cpp  AppController.h  AppSettings.cpp  AppSettings.h  Router.cpp  Router.h  ThemeManager.cpp  ThemeManager.h  ToastManager.cpp  ToastManager.h
SCU_Nexus/src/common/: QueryState.cpp  QueryState.h
SCU_Nexus/src/core/crypto/: Sm2Crypto.cpp  Sm2Crypto.h
SCU_Nexus/src/core/logging/: AuthLogger.cpp  AuthLogger.h
SCU_Nexus/src/core/network/: CookieHttpClient.cpp  CookieHttpClient.h  CookieJar.cpp  CookieJar.h  HttpRequest.h  HttpResponse.h  NetworkError.h  NetworkSettings.h
SCU_Nexus/src/models/: AcademicCalendarModels.cpp  AcademicCalendarModels.h  ClassroomModels.cpp  ClassroomModels.h  Course.cpp  Course.h  ExamPlanModels.cpp  ExamPlanModels.h  GradeModels.cpp  GradeModels.h  ScheduleConfig.cpp  ScheduleConfig.h  TimeSlot.cpp  TimeSlot.h
SCU_Nexus/src/repositories/: QueryCacheRepository.cpp  QueryCacheRepository.h  ScheduleRepository.cpp  ScheduleRepository.h
SCU_Nexus/src/services/api/: ApiDtos.h  ZhjwApiService.cpp  ZhjwApiService.h  ZhjwParsers.cpp  ZhjwParsers.h
SCU_Nexus/src/services/auth/: AuthErrors.h  AuthState.h  AuthViewModel.cpp  AuthViewModel.h  ScuAuthService.cpp  ScuAuthService.h  ZhjwAuthService.cpp  ZhjwAuthService.h
SCU_Nexus/src/services/calendar/: AcademicCalendarCatalog.cpp  AcademicCalendarCatalog.h  AcademicCalendarService.cpp  AcademicCalendarService.h  HolidayService.cpp  HolidayService.h
SCU_Nexus/src/services/course/: CourseLayoutService.cpp  CourseValidator.cpp  CourseValidator.h  JwxtScheduleParser.cpp  JwxtScheduleParser.h  ScheduleImportService.cpp
SCU_Nexus/src/services/grades/: GradeStatisticsService.h
SCU_Nexus/src/services/zhjw/: ZhjwApiQueryService.cpp  ZhjwQueryService.cpp  ZhjwQueryService.h
SCU_Nexus/src/viewmodels/: AcademicCalendarViewModel.cpp  AcademicCalendarViewModel.h  ClassroomViewModel.cpp  ClassroomViewModel.h  CourseEditViewModel.cpp  CourseEditViewModel.h  ExamPlanViewModel.cpp  ExamPlanViewModel.h  GradesViewModel.cpp  GradesViewModel.h  QueryCacheViewModel.cpp  QueryCacheViewModel.h  ScheduleImportViewModel.cpp  ScheduleImportViewModel.h  ScheduleViewModel.cpp  ScheduleViewModel.h
SCU_Nexus/tests/: test_app_foundation.cpp  test_calendar_data.cpp  test_classroom_query.cpp  test_grades_qml.cpp  test_person_b_foundation.cpp  test_person_d_queries.cpp  test_schedule.cpp  test_structured_calendar_qml.cpp  test_ui_contracts.cpp
SCU_Nexus/tests/fixtures/: calendar_empty.html  calendar_entries.html  classroom_index.html  classroom_query.json  passing_scores.json  scheme_scores.json
build_fix/: CMakeCache.txt  Makefile  cmake_install.cmake
build_fix/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_fix/SCU_Nexus_autogen/: deps  moc_predefs.h
qml/: main.qml
scripts/: build-windows.ps1
src/: main.cpp
src/common/: QueryState.h
src/models/: AcademicCalendarModels.cpp  Course.cpp  Course.h  ExamPlanModels.cpp  GradeModels.cpp  ScheduleConfig.cpp  WeekType.h
src/repositories/: QueryCacheRepository.cpp  ScheduleRepository.cpp  ScheduleRepository.h
src/viewmodels/: AcademicCalendarViewModel.cpp  AcademicCalendarViewModel.h  CourseEditViewModel.cpp  ExamPlanViewModel.cpp  ExamPlanViewModel.h  GradesViewModel.cpp  GradesViewModel.h  QueryCacheViewModel.cpp  ScheduleImportViewModel.cpp  ScheduleImportViewModel.h  ScheduleViewModel.cpp  ScheduleViewModel.h
src/widgets/: AcademicCalendarWidget.cpp  AcademicCalendarWidget.h  AppStyle.cpp  AppStyle.h  CampusBackdrop.cpp  CampusBackdrop.h  ExamPlanWidget.cpp  ExamPlanWidget.h  GradesWidget.cpp  GradesWidget.h  MainWindow.cpp  MainWindow.h  QueryStateWidget.cpp  QueryStateWidget.h
tests/: CMakeLists.txt  test_course.cpp  tst_d_module.cpp
(+47 files in other folders)
